load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

# TODO

# configuration: source of packages either download github, local checkout (can modify source), or rpms (present in standard paths)
# smart setting of CCACHE_BASEDIR is needed
# lib64

#build ints
# python2 -m pip install --user setuptools
# sudo swupd bundle-add devpkg-nspr

# switch to ninja

# https://docs.bazel.build/versions/master/configurable-attributes.html
# https://github.com/bazelbuild/bazel/issues/8171
# https://github.com/bazelbuild/bazel/issues/3902
# (the select only evaluates inside rules)
load("@bazel_skylib//lib:dicts.bzl", "dicts")

cmake_compiler_launcher = {
  "CMAKE_C_COMPILER_LAUNCHER": "ccache",
  "CMAKE_CXX_COMPILER_LAUNCHER": "ccache",
}

proton_cache_entries = {
   "CMAKE_CXX_COMPILER": "g++",

   #"BUILD_BINDINGS": "OFF",
   "BUILD_BINDINGS": "cpp",
   "BUILD_TESTING": "OFF",
   # these are optional by default, CMake would skip them if not found
   "SASL_IMPL": "cyrus",
   "SSL_IMPL": "openssl",
   "PROACTOR": "epoll",
   # normalize expectations (cmake rule expects ubuntu)
   #"LIB_INSTALL_DIR": "lib",
   #"LIB_SUFFIX": "",
}

cmake(
   name = "qpid-proton",
   cache_entries = select({
       ":ccache_enabled": dicts.add(proton_cache_entries, cmake_compiler_launcher),
       "//conditions:default": proton_cache_entries,
   }),
   lib_source = "@qpid-proton//:all",
   out_lib_dir = "lib64",

   #build_args = [
   #    "make -j8",
   #    "make install"
   #],

   out_shared_libs = ["libqpid-proton-core.so", "libqpid-proton.so"],
   #out_shared_libs = ["libqpid-proton-core.so", "libqpid-proton.so", "libqpid-proton-cpp.so"],
)

qpid_cache_entries = {
   "CMAKE_CXX_COMPILER": "g++",

   "BUILD_AMQP": "ON",
   "BUILD_SASL": "ON",
   "BUILD_SSL": "ON",
   # disable as much as we can
   "BUILD_BINDING_PERL": "OFF",
   "BUILD_BINDING_PYTHON": "OFF",
   "BUILD_BINDING_DOTNET": "OFF",
   "BUILD_BINDING_RUBY": "OFF",
   "BUILD_TESTING": "OFF",
   "BUILD_XML": "OFF",
   "BUILD_DOCS": "OFF",
   "BUILD_PROBES": "OFF",
   "BUILD_LEGACYSTORE": "OFF",
   "BUILD_LINEARSTORE": "OFF",
   "BUILD_HA": "OFF",
   "BUILD_RDMA": "OFF",
   "BUILD_MSSQL": "OFF",
   "BUILD_MSCLFS": "OFF",
   "INSTALL_QMFGEN": "OFF",

   "EXT_BUILD_DEPS": "$EXT_BUILD_DEPS",
   "Proton_DIR": "$EXT_BUILD_DEPS/qpid-proton/lib64/cmake/Proton",
}

cmake(
   name = "qpid-cpp",
   cache_entries = select({
       ":ccache_enabled": dicts.add(qpid_cache_entries, cmake_compiler_launcher),
       "//conditions:default": qpid_cache_entries,
   }),
   lib_source = "@qpid-cpp//:all",
   #build_args = [
   #     "make -j8",
   #     "make install"
   #],

   out_lib_dir = "lib64",
   out_shared_libs = ["libqpidclient.so", "libqpidcommon.so", "libqpidtypes.so", "libqpidmessaging.so"],

   deps = [":qpid-proton"],
)

filegroup(name = "sources", srcs = glob(["CMakeLists.txt", "src/**", "dist/**", "*.cmake"]), visibility = ["//visibility:public"])

cmake(
   name = "cli-cpp",
   cache_entries = {
       "CMAKE_CXX_COMPILER": "g++",

       "EXT_BUILD_DEPS": "$EXT_BUILD_DEPS",
       "Qpid_DIR": "$EXT_BUILD_DEPS/qpid-cpp/lib64/cmake/Qpid",
       "Proton_DIR": "$EXT_BUILD_DEPS/qpid-proton/lib64/cmake/Proton",
       "ProtonCpp_DIR": "$EXT_BUILD_DEPS/qpid-proton/lib64/cmake/ProtonCpp",

       "CMAKE_BUILD_WITH_INSTALL_RPATH": "TRUE",
       "CMAKE_INSTALL_RPATH_USE_LINK_PATH": "TRUE",
   },
   lib_source = "sources",

   #build_args = [
   #    "make -j8",
   #    "make install"
   #],

   out_binaries = ["aac3_receiver"],

   deps = select({
      ":deps_upstream": [":qpid-cpp", ":qpid-proton"],
      ":deps_rpms": [],
  }),
)

# This file uses the above definitions to define two custom build settings.
load("//:build_settings.bzl", "bool_flag", "string_flag")

string_flag(
  name = "deps",
  build_setting_default = "upstream",
)
config_setting(
    name = "deps_upstream",
    flag_values = {
        "//:deps": "upstream"
    }
)
config_setting(
    name = "deps_rpms",
    flag_values = {
        "//:deps": "rpms"
    }
)

bool_flag(
  name = "enable_ccache",
  build_setting_default = False,
)
config_setting(
    name = "ccache_enabled",
    flag_values = {"//:enable_ccache": "True"},
)
