module(name = "cli_cpp", version = "0.0.0")

# https://github.com/bazelbuild/bazel-central-registry

# Rule repositories #

# https://github.com/bazelbuild/bazel-skylib
bazel_dep(name = "bazel_skylib", version = "1.4.1")

# https://github.com/bazelbuild/rules_foreign_cc
# https://github.com/bazelbuild/rules_foreign_cc/issues/1035
#bazel_dep(name = "rules_foreign_cc", version = "0.9.0")

# https://github.com/bazelbuild/bazel/issues/17289#issuecomment-1438406403
bazel_dep(name="platforms", version="0.0.5")
