workspace(name = "cli_cpp")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Group the sources of the library so that CMake rule has access to it
all_content = """filegroup(name = "all", srcs = glob(["**"]), visibility = ["//visibility:public"])"""

# Qpid upstream source code repositories #

http_archive(
   name = "qpid-proton",
   build_file_content = all_content,
   strip_prefix = "qpid-proton-main",
   url = "https://github.com/apache/qpid-proton/archive/main.zip",
)
